Fixed Invoice flow